--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,19 +66,17 @@ jobs:
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
-    environment:
-      CFLAGS: -Wextra -Werror -march=native
-      CXXFLAGS: -Wextra -Werror -march=native
     steps:
-      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-i686-linux-gnu libc6-i386-cross
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-i686-linux-gnu libc6-i386-cross qemu-user-static
       - checkout
       - run:
           name: System Information
           command: cat /proc/cpuinfo /proc/meminfo
+      - run: dpkg --add-architecture i386
       - run: pip3 install meson
-      - run: CC=x86_64-linux-gnu-gcc CXX=x86_64-linux-gnu-g++ /usr/local/bin/meson setup build -Db_coverage=true
-      - run: ninja -C build -v -j 5
-      - run: ninja -C build -v test
+      - run: /usr/local/bin/meson setup build -Db_coverage=true --cross-file docker/cross-files/i686-gcc-qemu.cross
+      - run: /usr/local/bin/meson compile -C build --verbose -j 5
+      - run: /usr/local/bin/meson test -C build --num-processes 5 --print-errorlogs
 
   i686-gcc11-O2:
     resource_class: large
@@ -87,19 +85,17 @@ jobs:
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
-    environment:
-      CFLAGS: -Wextra -Werror -O2
-      CXXFLAGS: -Wextra -Werror -O2
     steps:
-      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-i686-linux-gnu libc6-i386-cross
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-11-i686-linux-gnu libc6-i386-cross qemu-user-static
       - checkout
       - run:
           name: System Information
           command: cat /proc/cpuinfo /proc/meminfo
+      - run: dpkg --add-architecture i386
       - run: pip3 install meson
-      - run: CC=x86_64-linux-gnu-gcc-11 CXX=x86_64-linux-gnu-g++-11 /usr/local/bin/meson setup build -Db_coverage=true
-      - run: ninja -C build -v -j 3
-      - run: ninja -C build -v test
+      - run: /usr/local/bin/meson setup build -Db_coverage=true --cross-file docker/cross-files/i686-gcc-11-qemu.cross
+      - run: /usr/local/bin/meson compile -C build --verbose -j 5
+      - run: /usr/local/bin/meson test -C build --num-processes 5 --print-errorlogs
 
 
 workflows:
